[package]
name = "gigadex-jup-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "0.1.1"
solana-sdk = "1.14"
borsh = "0.10.3"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anyhow = "1.0.75"
solana-client = "1.16.11"